--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 67,
    "id": "8a8e4d4d",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 68,
    "id": "0bcc7c33",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "id": "65977a1d",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "5  Tabular Data with Python, Part II:     April 28                NaN"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "id": "8e9deb43",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "id": "872eca98",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 72,
    "id": "f0df1526",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "max            22.000000"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 73,
    "id": "16e05d5f",
    "metadata": {},
    "outputs": [
@@ -590,7 +590,7 @@
        "5  Tabular Data with Python, Part II:     April 28                NaN"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 74,
    "id": "1e08a25c",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,7 @@
        "np.float64(22.0)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 75,
    "id": "d73a5047",
    "metadata": {},
    "outputs": [],
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 76,
    "id": "3f1c4d78",
    "metadata": {},
    "outputs": [
@@ -878,7 +878,7 @@
        "35966  2131904.0  13749781.0             4/5/2024           4/5/2025  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 77,
    "id": "d1ed8fcd",
    "metadata": {},
    "outputs": [
@@ -1283,7 +1283,7 @@
        "max     1.381636e+07                  NaN                NaN  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "id": "7a79eee9",
    "metadata": {},
    "outputs": [
@@ -1319,7 +1319,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 79,
    "id": "769eec9b",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1368,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 80,
    "id": "da15158d",
    "metadata": {},
    "outputs": [],
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 81,
    "id": "abb8b2e3",
    "metadata": {},
    "outputs": [
@@ -1431,7 +1431,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "id": "e31996cf",
    "metadata": {},
    "outputs": [
@@ -1456,7 +1456,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 83,
    "id": "031b94fd",
    "metadata": {},
    "outputs": [
@@ -1490,7 +1490,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 84,
    "id": "26a70dd6",
    "metadata": {},
    "outputs": [
@@ -1515,7 +1515,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 85,
    "id": "69df7fb5",
    "metadata": {},
    "outputs": [
@@ -1544,7 +1544,7 @@
        "Name: is_late, dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 86,
    "id": "ca9dd7b5",
    "metadata": {},
    "outputs": [
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 87,
    "id": "3f6b6ffb",
    "metadata": {},
    "outputs": [
@@ -1623,7 +1623,7 @@
        "<Axes: title={'center': 'Opened Cases by Month'}, xlabel='opened_month'>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "f9658099",
    "metadata": {},
    "outputs": [
@@ -2053,7 +2053,7 @@
        "[4034 rows x 21 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "a92ce634",
    "metadata": {},
    "outputs": [
@@ -2098,7 +2098,7 @@
        "Name: caseid, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2111,7 +2111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "3a5aa567",
    "metadata": {},
    "outputs": [
@@ -2511,7 +2511,7 @@
        "[35967 rows x 21 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2525,7 +2525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "519dd76a",
    "metadata": {},
    "outputs": [
@@ -2541,7 +2541,7 @@
        "closeddatetime           287736\n",
        "late_(yes/no)           2125752\n",
        "dept                    2486515\n",
-       "reasonname                36581\n",
+       "reasonname              2337381\n",
        "typename                2997983\n",
        "casestatus              2263425\n",
        "sourceid                2618151\n",
@@ -2557,7 +2557,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2569,7 +2569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 92,
    "id": "a033922d",
    "metadata": {},
    "outputs": [
@@ -2969,7 +2969,7 @@
        "[35967 rows x 21 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
