--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -9538,7 +9538,12 @@
     "    DataCamp Pandas Cheat Sheet</a></strong>  \n",
     "    – Beginner-friendly and visual, with examples of how to use each function.\n",
     "  </li>\n",
-    "</ul>\n"
+    "  <li>\n",
+    "    📖 <strong><a href=\"https://matplotlib.org/stable/gallery/index.html\" target=\"_blank\">\n",
+    "    MatPlotLib</a></strong>  \n",
+    "    – Matplotlib is a comprehensive library for creating static, animated, and interactive visualizations in Python. Matplotlib makes easy things easy and hard things possible.\n",
+    "  </li>\n",
+    "  </ul>\n"
    ]
   },
   {
