--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -405,17 +405,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3f1c4d78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# load the dataset\u001b[39;00m\n\u001b[32m      2\u001b[39m data = \u001b[33m\"\u001b[39m\u001b[33mSA311_Street_Infrastructure.csv\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;66;03m# url https://data.sanantonio.gov/dataset/93b0e7ee-3a55-4aa9-b27b-d1817e91aec3/resource/00370431-ce2d-4b32-9b75-b9734bd13fa3/download/allservice_streets-infrastructure.csv\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m sa311_df = \u001b[43mpd\u001b[49m.read_csv(data)\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# .head() or .tail() previews 5 rows by default but you can change the number of rows you want to preview. \u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m#sa311_df.head()\u001b[39;00m\n\u001b[32m      8\u001b[39m sa311_df.tail()\n",
+      "\u001b[31mNameError\u001b[39m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# load the dataset\n",
     "data = \"SA311_Street_Infrastructure.csv\" # url https://data.sanantonio.gov/dataset/93b0e7ee-3a55-4aa9-b27b-d1817e91aec3/resource/00370431-ce2d-4b32-9b75-b9734bd13fa3/download/allservice_streets-infrastructure.csv\n",
     "\n",
     "sa311_df = pd.read_csv(data)\n",
     "\n",
-    "# .head() or .tail() previews 5 rows by default but you change the number of rows you want to preview. \n",
+    "# .head() or .tail() previews 5 rows by default but you can change the number of rows you want to preview. \n",
     "#sa311_df.head()\n",
     "sa311_df.tail()"
    ]
